--- a/loans.yml
+++ b/loans.yml
@@ -2,7 +2,7 @@
 build:
   version : "3.0"
 loans:
-  message: "Welcome to Eazybank loans related development APIs"
+  message: "Welcome to Eazybank loans related dev APIs"
   contactDetails:
     name: "dev-loansDeveloper"
     email: "dev-loans@example.com"
