--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@
 build:
   version : "3.0"
 accounts:
-  message: "Welcome to Eazybank accounts related local APIs"
+  message: "Welcome to Eazybank accounts related development APIs"
   contactDetails:
     name: "John Doe-Developer"
     email: "john@example.com"
