--- a/gatewayserver.yml
+++ b/gatewayserver.yml
@@ -1,11 +1,11 @@
 server:
-  port:  8072
+  port: 8072
 
 eureka:
   instance:
     preferIpAddress: true
   client:
     registerWithEureka: true
-    fetchRegistery: true
+    fetchRegistry: true
     serviceUrl:
-      defaultZone: "https://localhost:8070/eureka/"
+      defaultZone: "http://localhost:8070/eureka/"
